--- a/src/pages/page-liste-personnages/pageListePersonnages.scss
+++ b/src/pages/page-liste-personnages/pageListePersonnages.scss
@@ -4,4 +4,21 @@ page-pageListePersonnages {
     text-align: center;
   }
 
+  ion-content {
+    background: url('../assets/img/ListePersonnages.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -ms-background-size: cover;
+    background-size: cover;
+
+  }
+
+  .item.item-trns {
+  border-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
+  text-align: center;
+  color: color($colors,primary);
+
+}
+
 }
