--- a/src/pages/guild-page/guild-page.scss
+++ b/src/pages/guild-page/guild-page.scss
@@ -4,4 +4,22 @@ page-guild-page {
     text-align: center;
   }
 
+  .title {
+    color : color($colors,dark);
+  }
+
+  .custom-class-divider {
+    color: color($colors,dark);
+    background-color: color($colors,danger);
+  }
+
+  ion-content {
+    background: url('../assets/img/background.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -ms-background-size: cover;
+    background-size: cover;
+
+  }
+
 }
