--- a/src/pages/guild-page/guild-page.scss
+++ b/src/pages/guild-page/guild-page.scss
@@ -1,7 +1,11 @@
 page-guild-page {
 
   ion-navbar {
-    text-align: center;
+
+    ion-title{
+      text-align: center;
+    }
+
   }
 
   .title {
@@ -14,7 +18,7 @@ page-guild-page {
   }
 
   ion-content {
-    background: url('../assets/img/background.jpg') no-repeat center center fixed;
+    background: url('../assets/img/background.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -ms-background-size: cover;
