--- a/src/pages/page-accueil/pageAccueil.scss
+++ b/src/pages/page-accueil/pageAccueil.scss
@@ -1,11 +1,15 @@
 page-pageAccueil {
 
   ion-navbar {
-    text-align: center;
+
+    ion-title{
+      text-align: center;
+    }
+
   }
 
   ion-content {
-    background: url('../assets/img/background.jpg') no-repeat center center fixed;
+    background: url('../assets/img/background.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -ms-background-size: cover;
