--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,44 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+ion-toolbar
+{
+  text-align: center;
+}
+
+.myBg {
+   background-color: color($colors,blizzard);
+ }
+
+ ion-content {
+   background: url('../assets/img/background.png') no-repeat center center fixed;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -ms-background-size: cover;
+   background-size: cover;
+
+ }
+
+ .custom-class-divider {
+
+   h2 {
+     color: color($colors,secondary);
+   }
+
+   div
+   {
+     color : color($colors,secondary);
+   }
+
+   p {
+     color: color($colors,secondary);
+   }
+
+   img {
+     height: 30px;
+     width: 30px;
+   }
+
+   background-color: color($colors,blizzard);
+ }
