--- a/src/pages/page-account/page-account.scss
+++ b/src/pages/page-account/page-account.scss
@@ -8,14 +8,32 @@ page-page-account {
 
   }
 
+  .myBg {
+     background-color: color($colors,blizzard);
+   }
+
   .title {
     color : color($colors,dark);
   }
 
   .custom-class-divider {
-    color: color($colors,dark);
-    background-color: color($colors,danger);
+
+    h2 {
+      color: color($colors,secondary);
+    }
+
+    div
+    {
+      color : color($colors,secondary);
+    }
+
+    p {
+      color: color($colors,secondary);
+    }
+
+    background-color: color($colors,blizzard);
   }
+
 
   ion-content {
     background: url('../assets/img/background.png') no-repeat center center fixed;
