--- a/src/pages/page-personnage/pagePersonnage.scss
+++ b/src/pages/page-personnage/pagePersonnage.scss
@@ -14,7 +14,16 @@ page-pagePersonnage {
 
   .custom-class-divider {
 
+    h1 {
+        color: color($colors,secondary);
+    }
+    
     h2 {
+        color: color($colors,secondary);
+    }
+
+    ion-icon
+    {
       color: color($colors,secondary);
     }
 
