--- a/src/pages/mes-guildes/mes-guildes.scss
+++ b/src/pages/mes-guildes/mes-guildes.scss
@@ -12,6 +12,10 @@ page-mes-guildes {
      background-color: color($colors,blizzard);
    }
 
+   .color {
+     background-color: map-get($colors,"alert");
+   }
+
    .custom-class-divider {
 
      h2 {
