--- a/src/pages/minis/minis.scss
+++ b/src/pages/minis/minis.scss
@@ -1,7 +1,21 @@
 page-minis {
-ion-navbar {
-  ion-title {
-    text-align: left;
-  }
-}
+
+  .myBg {
+     background-color: color($colors,blizzard);
+   }
+
+   .item-content
+   {
+     background-color: transparent !important;
+
+     h1 {
+       text-align: center;
+       color: map-get($colors, "secondary");
+     }
+   }
+
+   ion-title
+   {
+     text-align: center;
+   }
 }
