--- a/src/pages/page-personnage/pagePersonnage.scss
+++ b/src/pages/page-personnage/pagePersonnage.scss
@@ -17,7 +17,7 @@ page-pagePersonnage {
     h1 {
         color: color($colors,secondary);
     }
-    
+
     h2 {
         color: color($colors,secondary);
     }
@@ -39,6 +39,63 @@ page-pagePersonnage {
 
     background-color: color($colors,blizzard);
   }
+
+  .custom-class-divider-all {
+
+    h1 {
+        color: color($colors,secondary);
+    }
+
+    h2 {
+        color: color($colors,secondary);
+    }
+
+    ion-icon
+    {
+      color: color($colors,secondary);
+    }
+
+    div
+    {
+      color : color($colors,secondary);
+      display: inline;
+    }
+
+    p {
+      color: color($colors,secondary);
+    }
+
+    background-color: color($colors,blizzard);
+  }
+
+  .custom-class-divider-content {
+
+    h1 {
+        color: color($colors,secondary);
+    }
+
+    h2 {
+        color: color($colors,secondary);
+    }
+
+    ion-icon
+    {
+      color: color($colors,secondary);
+    }
+
+    div
+    {
+      color : color($colors,secondary);
+      display: inline;
+    }
+
+    p {
+      color: color($colors,secondary);
+    }
+
+    background-color: transparent !important;
+  }
+
 
   ion-content {
     background: url('../assets/img/GW2.png') no-repeat center center fixed;
