--- a/src/pages/finishers/finishers.scss
+++ b/src/pages/finishers/finishers.scss
@@ -1,48 +1,11 @@
 page-finishers {
 
-  ion-card {
-  position: relative;
-  text-align: center;
-}
-
-.myBg {
-   background-color: color($colors,blizzard);
- }
-
- .action-finishers
- {
-   background-color: map-get($colors,"secondary");
- }
-
- .item-content
- {
-   background-color: map-get($colors,"secondary");
-   h3
-   {
-     text-align: center;
-   }
- }
-
- ion-title
- {
-   text-align: center;
- }
-
-.card-title {
-  position: absolute;
-  top: 36%;
-  font-size: 2.0em;
-  width: 100%;
-  font-weight: bold;
-  color: #222;
-}
-
-.card-subtitle {
-  font-size: 1.0em;
-  position: absolute;
-  top: 52%;
-  width: 100%;
-  color: #222;
-}
-
+  ion-navbar
+  {
+    ion-title
+    {
+      text-align: center;
+    }
+  }
+  
 }
