--- a/src/pages/mes-guildes/mes-guildes.scss
+++ b/src/pages/mes-guildes/mes-guildes.scss
@@ -1,51 +1,11 @@
 page-mes-guildes {
 
-  ion-navbar {
-
-    ion-title {
+  ion-navbar
+  {
+    ion-title
+    {
       text-align: center;
     }
-
-  }
-
-  .myBg {
-     background-color: color($colors,blizzard);
-   }
-
-   .color {
-     background-color: map-get($colors,"alert");
-   }
-
-   .custom-class-divider {
-
-     h2 {
-       color: color($colors,secondary);
-     }
-
-     div
-     {
-       color : color($colors,secondary);
-     }
-
-     p {
-       color: color($colors,secondary);
-     }
-
-     img {
-       height: 30px;
-       width: 30px;
-     }
-
-     background-color: color($colors,blizzard);
-   }
-
-  ion-content {
-    background: url('../assets/img/background.png') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -ms-background-size: cover;
-    background-size: cover;
-
   }
 
 }
