--- a/src/pages/page-account/page-account.scss
+++ b/src/pages/page-account/page-account.scss
@@ -1,47 +1,11 @@
 page-page-account {
 
-  ion-navbar {
-
-    ion-title{
+  ion-navbar
+  {
+    ion-title
+    {
       text-align: center;
     }
-
   }
-
-  .myBg {
-     background-color: color($colors,blizzard);
-   }
-
-  .title {
-    color : color($colors,dark);
-  }
-
-  .custom-class-divider {
-
-    h2 {
-      color: color($colors,secondary);
-    }
-
-    div
-    {
-      color : color($colors,secondary);
-    }
-
-    p {
-      color: color($colors,secondary);
-    }
-
-    background-color: color($colors,blizzard);
-  }
-
-
-  ion-content {
-    background: url('../assets/img/background.png') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -ms-background-size: cover;
-    background-size: cover;
-
-  }
-
+  
 }
