--- a/src/pages/page-personnage/pagePersonnage.scss
+++ b/src/pages/page-personnage/pagePersonnage.scss
@@ -1,109 +1,11 @@
 page-pagePersonnage {
 
-  ion-navbar {
-
-    ion-title{
+  ion-navbar
+  {
+    ion-title
+    {
       text-align: center;
     }
-
-  }
-
-  .myBg {
-     background-color: color($colors,blizzard);
-   }
-
-  .custom-class-divider {
-
-    h1 {
-        color: color($colors,secondary);
-    }
-
-    h2 {
-        color: color($colors,secondary);
-    }
-
-    ion-icon
-    {
-      color: color($colors,secondary);
-    }
-
-    div
-    {
-      color : color($colors,secondary);
-      display: inline;
-    }
-
-    p {
-      color: color($colors,secondary);
-    }
-
-    background-color: color($colors,blizzard);
-  }
-
-  .custom-class-divider-all {
-
-    h1 {
-        color: color($colors,secondary);
-    }
-
-    h2 {
-        color: color($colors,secondary);
-    }
-
-    ion-icon
-    {
-      color: color($colors,secondary);
-    }
-
-    div
-    {
-      color : color($colors,secondary);
-      display: inline;
-    }
-
-    p {
-      color: color($colors,secondary);
-    }
-
-    background-color: color($colors,blizzard);
-  }
-
-  .custom-class-divider-content {
-
-    h1 {
-        color: color($colors,secondary);
-    }
-
-    h2 {
-        color: color($colors,secondary);
-    }
-
-    ion-icon
-    {
-      color: color($colors,secondary);
-    }
-
-    div
-    {
-      color : color($colors,secondary);
-      display: inline;
-    }
-
-    p {
-      color: color($colors,secondary);
-    }
-
-    background-color: transparent !important;
-  }
-
-
-  ion-content {
-    background: url('../assets/img/GW2.png') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -ms-background-size: cover;
-    background-size: cover;
-
   }
 
 }
