Ajout styles (again)

--- a/src/pages/mes-personnages/mes-personnages.scss
+++ b/src/pages/mes-personnages/mes-personnages.scss
@@ -9,10 +9,12 @@ page-mes-personnages {
 
   .segment-md .segment-button {
     color: white;
+
+    
 }
 
   ion-content {
-    background: url('../assets/img/ListePersonnages.jpg') no-repeat center center fixed;
+    background: url('../assets/img/classes.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -ms-background-size: cover;
