--- a/src/pages/page-account/page-account.scss
+++ b/src/pages/page-account/page-account.scss
@@ -12,16 +12,16 @@ page-page-account {
 
     border-radius: 20px;
 
-    ion-item:nth-child(even)
+    ion-item:nth-child(odd)
     {
-      background-color: #302e2e;
+      background-color: #bbdefb;
       h2 {
-        color : #bbdefb;
+        color : color($colors,"primary");
       }
     }
 
     ion-item {
-      background-color: #212121;
+      background-color: white;
     }
 
     ion-item.item-account
@@ -42,7 +42,7 @@ page-page-account {
 
     h2 {
       font-size: 1.8em !important;
-      color: #e53935;
+      color: color($colors,"primary");
       font-family: 'Roboto', sans-serif;
       font-weight: 500;
       text-align: center;
@@ -50,7 +50,7 @@ page-page-account {
 
     p {
       font-size:  1.3em !important;
-      color: #bbdefb;
+      color: color($colors,"primary");
       font-family: 'Roboto', sans-serif;
     }
 
