Changement style page portefeuille

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,7 +29,8 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   blizzard: #3a3245,
-  red-lighten-1: #ef5350
+  red-lighten-1: #ef5350,
+  brown-trade : #893B17
 );
 
 // App iOS Variables
