--- a/src/pages/my-wallet/my-wallet.scss
+++ b/src/pages/my-wallet/my-wallet.scss
@@ -1,11 +1,29 @@
 page-my-wallet {
 
-  ion-navbar
-  {
-    ion-title
-    {
+  ion-navbar {
+    ion-title {
       text-align: center;
     }
+  }
+
+  .item {
+
+    background-color: color($colors,"brown-trade");
+    border-radius: 13px;
+
+    p {
+      color: white;
+    }
+
+  }
+
+  ion-content {
+    background: url('../assets/img/trade.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -ms-background-size: cover;
+    background-size: cover;
+
   }
 
 }
