--- a/src/pages/finishers/finishers.scss
+++ b/src/pages/finishers/finishers.scss
@@ -6,6 +6,10 @@ page-finishers {
     }
   }
 
+  .toolbar-content-md {
+    padding-right: 15px;
+  }
+
   ion-content {
     background: url('../assets/img/sword.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
