--- a/src/pages/page-personnage/pagePersonnage.scss
+++ b/src/pages/page-personnage/pagePersonnage.scss
@@ -1,11 +1,13 @@
 page-pagePersonnage {
 
-  ion-navbar
-  {
-    ion-title
-    {
+  ion-navbar {
+    ion-title {
       text-align: center;
     }
+  }
+
+  .toolbar-content-md {
+    padding-right: 15px;
   }
 
 }
