--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,7 +30,7 @@ $colors: (
   dark:       #222,
   blizzard: #3a3245,
   red-lighten-1: #ef5350,
-  brown-trade : #893B17
+  brown-trade: #8d6e63
 );
 
 // App iOS Variables
