--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,6 +30,7 @@ $colors: (
   dark:       #222,
   blizzard: #3a3245,
   red-lighten-1: #ef5350,
+  red-lighten-2: #e57373,
   brown-trade: #8d6e63
 );
 
