--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,15 +23,16 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222,
-  blizzard: #3a3245,
-  red-lighten-1: #ef5350,
-  red-lighten-2: #e57373,
-  brown-trade: #8d6e63
+  primary:        #387ef5,
+  secondary:      #32db64,
+  danger:         #f53d3d,
+  light:          #f4f4f4,
+  dark:           #222,
+  blizzard:       #3a3245,
+  red-lighten-1:  #ef5350,
+  red-lighten-2:  #e57373,
+  brown-trade:    #8d6e63,
+  finishers:      #379954   // #37874f  //green color
 );
 
 // App iOS Variables
