Solution finale (3e Reich)

--- a/src/pages/guild-page/guild-page.scss
+++ b/src/pages/guild-page/guild-page.scss
@@ -27,7 +27,8 @@ page-guild-page {
   .list-header-md, .list-md ion-item-divider {
     margin-left: 0;
     padding-left: 16px;
-    border-bottom: 1px solid #dedede;
+    border: none;
+    margin-bottom: 0px;
     font-size: 1.4rem;
     color: white;
     background-color: #e57373;
