--- a/src/pages/page-accueil/pageAccueil.scss
+++ b/src/pages/page-accueil/pageAccueil.scss
@@ -100,8 +100,7 @@ page-pageAccueil {
 
   }
 
-  ion-slide.presentation
-  {
+  ion-slide.presentation {
     opacity: 0.85;
   }
 
@@ -141,6 +140,7 @@ page-pageAccueil {
 
   div.alert-wrapper {
     background-color: #212121;
+    text-align: center;
     margin-top: 100px;
   }
 
